--- a/templates/index.html
+++ b/templates/index.html
@@ -10,365 +10,94 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="zindex.css">
+  <!-- <link rel="stylesheet" href="zindex.css"> -->
   <link href=scrape_mars.py>
   
 </head>
 <body>
-    <div class="box_1">
-      <!-- Container with Jumbotron Cell and Refresh button -->
-      <div class="jumbotron text-center">
-        <h1>Mission to Mars</h1>
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Refresh with current Data</a></p>
-      </div>
-
-      <h1 class="heading">Latest Mars News</h1>
-      <br>
-      <h3>{{mars_data.title}}</h3>
-      <h4>{{mars_data.article}}</h4>
-      <br>
-      <!-- Mission to Mars info -->
-      <div class="box_2">
-        <div class="row" id="Mars_Data">
-          <div class="col-md-8 col-md-offset-2">
-            <h3 class="heading">Featured Mars Image</h3>
-            <img src="{{mars_data.featured_image_url}}" alt="url">
-          </div>
+  <div class="col-sm-12">
+      <div class="box_1">
+        <!-- Container with Jumbotron Cell and Refresh button -->
+        <div class="jumbotron text-center">
+          <h1>Mission to Mars</h1>
+          <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Refresh with current Data</a></p>
         </div>
-      </div>
-      <br>
-              <!-- Mission to Mars Twitter -->
-              <div class="box_3">
-                <div class="row" id="Mars_Data">
-                  <div class="col-md-4">
-                    <h4 class="heading">Mars Weather</h4>
-                    <h2>{{mars_data.tweets}}</h2>
-                  </div>
-                </div>
-              </div>
-              <br>
-        <!-- Mission to Mars info Table -->
-        <div class="box_3">
+      
+
+        <!-- Mission to Mars info -->
+        <div class="box_2">
           <div class="row" id="Mars_Data">
-            <div class="col-md-4">
-              <h4 class="heading">Mars Table</h4>
-              <small>{{mars_data.table | safe}}</small>
+            <div class="col-md-8 col-md-offset-2">
+
+              <!-- Latest Mars News -->
+              <h1 class="heading">Latest Mars News</h1>
+              <br>
+              <h3>{{mars_data.title}}</h3>
+              <h4>{{mars_data.article}}</h4>
+              <br>
+          
+              <h1 class="heading">Featured Mars Image</h1>
+              <img src="{{mars_data.featured_image_url}}" width="1000" hight="1000"  alt="url">
             </div>
           </div>
         </div>
         <br>
-      <!-- Mission to Mars info -->
-      <div class="box_2">
-        <div class="row" id="Mars_Data">
-          <div class="col-md-8 col-md-offset-2">
-            <h1 class="heading">Hemisphere_image</h1>
-            <br>
-            <!-- Title and url for Hemisphere Images are in a list in the mars_data.hemisphere_image_urls variable -->
-            <h2>{{mars_data.hemispheret0}}</h2><!-- Title for Hemisphere Image 1 -->
-            <br>
-              <div class="thumbnail">
-                <img src="{{mars_data.hemisphere0}}" width:25%, alt="url"><!-- url for Hemisphere Image 1 -->
-              </div>
-            <br>
-            <br>
-            <h2>{{mars_data.hemispheret1}}</h2><!-- Title for Hemisphere Image 2 -->
-            <br>
-              <div class="thumbnail"> 
-                <img src="{{mars_data.hemisphere1}}" width:25%, alt="url"><!-- url for Hemisphere Image 2 -->
-              </div>
-            <br>
-            <br>
-            <h2>{{mars_data.hemispheret2}}</h2><!-- Title for Hemisphere Image 3 -->
-            <br>
-              <div class="thumbnail"> 
-                <img src="{{mars_data.hemisphere2}}" width:25%, alt="url"><!-- url for Hemisphere Image 3 -->
-              </div>
-            <br>
-            <br>
-            <h2>{{mars_data.hemispheret3}}</h2><!-- Title for Hemisphere Image 4 -->
-            <br>
-              <div class="thumbnail"> 
-                <img src="{{mars_data.hemisphere3}}" width:25%, alt="url"><!-- url for Hemisphere Image 4 -->
-              </div>
+        <!-- Mission to Mars Twitter & Table -->
+        <div class="box_3">
+          <div class="row" id="Mars_Data">
+            <div class="col-md-4">
+              <h1 class="heading">Mars Weather</h1>
+              <h3>{{mars_data.tweets}}</h3>
+              <br>
+              <br>
+              <h1 class="heading">Mars Table</h1>
+              <h4>{{mars_data.table | safe}}</h4>
+            </div>
+          </div>
+        </div>
+        <br>
+        <!-- Mission to Mars info -->
+        <div class="jumbotron text-center">
+          <div class="row">
+            <div class="col-sm-6">
+              <h1 class="heading">Hemisphere Images</h1>
+            </div>
+          </div>
+          <br>
+          <!-- Title and url for Hemisphere Images are in a list in the mars_data.hemisphere_image_urls variable -->
+          <div class="row">
+            <div class="col-lg-6">
+              <img src="{{mars_data.hemisphere0}}" width="500" hight="500" alt="url"><!-- url for Hemisphere Image 1 -->
+              <h2>{{mars_data.hemispheret0}}</h2><!-- Title for Hemisphere Image 1 -->
+            </div>
+          </div> 
+          <br>
+          <br>
+          <div class="row"> 
+            <div class="col-lg-6">
+              <img src="{{mars_data.hemisphere1}}" width="500" hight="500" alt="url"><!-- url for Hemisphere Image 2 -->
+              <h2>{{mars_data.hemispheret1}}</h2><!-- Title for Hemisphere Image 2 -->
+            </div>
+          </div>
+          <br>
+          <br>
+          <div class="row">
+            <div class="col-lg-6"> 
+              <img src="{{mars_data.hemisphere2}}" width="500" hight="500" alt="url"><!-- url for Hemisphere Image 3 -->
+              <h2>{{mars_data.hemispheret2}}</h2><!-- Title for Hemisphere Image 3 -->
+            </div>
+          </div>
+          <br>
+          <br>
+          <div class="row"> 
+            <div class="col-lg-6"> 
+              <img src="{{mars_data.hemisphere3}}" width="500" hight="500" alt="url"><!-- url for Hemisphere Image 4 -->
+              <h2>{{mars_data.hemispheret3}}</h2><!-- Title for Hemisphere Image 4 -->
+            </div>
           </div>
         </div>
       </div>
-
     </div>
   </body>
   
-  </html>
-  
-
-  <!-- <div class="row">
-    <div class="col">
-      <h3 class="text-center">Cards</h3>
-      <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-  </div>
---> -->
-
-
-<!-- <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Mission to Mars</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto"> -->
-        <!-- style="float:right" ???This is not working to move Nav Bar items to the right https://www.w3schools.com/css/css_navbar.asp??? -->
-        <!-- <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Plots</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Max Temperature</a>
-            <a class="dropdown-item" href="#">Humidity</a>
-            <a class="dropdown-item" href="#">Cloudiness</a>
-            <a class="dropdown-item" href="#">Wind Speed</a>
-          </div>
-        </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Comparison</a>
-            </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Data</a>
-        </li>
-      </ul>
-    </div>
-  </nav> -->
-<!-- Need to use <h1 class="jumbotron">Mission to Mars</h1> -->
-
-
-
-  <!-- This is the outer container One Container; then have 2 containers inside; one to the left and the charts to the right-->
-  <!-- <div class="box_1">
-      <div class="row">
-      <div class="col-lg-12">
-      <h3 class="jumbotron">Mission to Mars</h3>
-        <ul class="nav nav-pills">
-          <li class="nav-item"> -->
-            <!-- Click button to refresh page with new images -->
-            <!-- <a class="nav-link active" href="app.py">Refresh with current Data</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>      -->
-
-    <!-- This is the left container -->
-    <!-- <div class="box_2">
-      <div class="row">
-      <div class="col-md-12">
-      <h3 class="text-center">Summary : Latitude vs Weather</h3>
-      <hr>
-      <p></p><p></p><p></p>
-   -->
-      <!-- <div class="temperature col-xs-3 col-sm-6 col-md-12" style = "padding: 25px"> -->
-      <!-- <p> -->
-        <!-- <a target="_blank" href="Maps/assets/images/temperaturemap.png"> -->
-        <!-- <img src="Maps/assets/images/CityLat_vs_MaxTemp.png" alt="Temperature Map" style=  "width: 225px" style="padding: 10px" align ="left" >
-      </p>
-      <p>
-        The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis,
-        we first pulled data from the OpenWeatherMap API to assemble a dataset with a minimum of 500 cities.
-        <p></p>
-        After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at
-        included: temperature, cloudiness, wind speed and humidity. This site provides the source data and visualizations created as
-        part of the analysis, as well as explainations and descriptions of any trends and correlations witnessed.</p>
-    </div> -->
-
-    <!-- This is the right container -->
-    <!-- <div class="box_3">col-xs-3 col-sm-6 col-md-12
-      <h3 class="text-center">Visualizations</h3>
-      <hr> -->
-
-      <!-- <div class="temperature col-xs-3 col-sm-6 col-md-12" style = "padding: 25px"> -->
-      <!-- <a target="_blank" href="Maps/assets/images/CityLat_vs_MaxTemp.png">
-      <img src="Maps/assets/images/CityLat_vs_MaxTemp.png" alt="Temperature Map" style=  "width: 225px" style="padding: 5px">
-         -->
-
-      <!-- <div class="humidity col-xs-3 col-sm-6 col-md-12" style = "padding: 25px"> -->
-        <!-- <a target="_blank" href="Maps/assets/images/CityLat_vs_Humidity.png">
-        <img src="Maps/assets/images/CityLat_vs_Humidity.png" alt="Humidity Map"style= "width: 225px" style="padding: 5px">
-       -->
-
-      <!-- <div class="cloudy col-xs-3 col-sm-6 col-md-12" style = "padding: 25px"> -->
-        <!-- <a target="_blank" href="Maps/assets/images/CityLat_vs_Cloudiness.png" >
-        <img src="Maps/assets/images/CityLat_vs_Cloudiness.png" alt="Cloudiness Map" style= "width: 225px" style="padding: 5px">
-       -->
-
-      <!-- <div class="wind col-xs-3 col-sm-6 col-md-12" style = "padding: 25px"> -->
-        <!-- <a target="_blank" href="Maps/assets/images/CityLat_vs_Wind_Speed.png" >
-        <img src="Maps/assets/images/CityLat_vs_Wind_Speed.png" alt="Wind Speed" style= "width: 225px" style="padding: 5px">
-        <div class="clearfix"></div> -->
-    <!-- </div>
-  
-  </div>
-
-</body>
-
-</html> -->
-
-<!-- <div class="container">
-  
-         
-        <div class="col-md-4">            
-          <div class="thumbnail">
-
-          </div>
-          <div class="caption">
-               <h3>Thumbnail label</h3>
-               <p>...</p>
-               <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">
-              
-            </div>
-          <div class="caption">
-              <h3>Thumbnail label</h3>
-              <p>...</p>
-              <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-          </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">
-
-            </div>
-            <div class="caption">
-                <h3>Thumbnail label</h3>
-                <p>...</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-        </div>
-    </div> -->
-
-  <!-- <div class="row">
-    <div class="col">
-        <h3 class="text-center">List Groups</h3>
-        <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-              Cras justo odio <span class="badge badge-pill badge-secondary">10</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-              Cras justo odio <span class="badge badge-pill badge-secondary">3</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-              Cras justo odio <span class="badge badge-pill badge-secondary">4</span>
-          </li>
-        </ul>
-    </div>
-  </div>
-
-
-    <div class="row">
-      <div class="col">
-        <h3 class="text-center">Cards</h3>
-        <div class="card" style="width: 18rem;">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-    </div>
- -->
-
-  <!-- <div class="row">
-    <div class="col">
-      <h3 class="text-center">Nav Tabs</h3>
-      <ul class="nav nav-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Active</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-      </div>
-  </div>
-
-    <div class="row">
-      <div class="col">
-        <h3 class="text-center">Nav Pills</h3>
-        <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-          </ul>
-        </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col">
-        <h3 class="text-center">Alerts</h3>
-        <div class="alert alert-primary" role="alert">
-            Info Alert
-          </div>
-          <div class="alert alert-success" role="alert">
-            Success Alert
-          </div>
-          <div class="alert alert-danger" role="alert">
-            Danger Alert
-          </div>
-          <div class="alert alert-warning" role="alert">
-            Warning Alert
-          </div>
-        </div>
-    </div>
-
-
-    <div class="row">
-      <div class="col">
-        <h3 class="text-center">Progress Bar</h3>
-          <div class="progress">
-              <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                50%
-              </div>
-          </div>
-      </div>
-    </div>
-
-    <h3 class="text-center">Buttons</h3>
-    <div class="row">
-
-      <button type="button" class="btn btn-default">Default Button</button>
-      <button type="button" class="btn btn-primary">Primary Button</button>
-      <button type="button" class="btn btn-danger">Danger Button</button>
-      <button type="button" class="btn btn-info">Info Button</button>
-      <button type="button" class="btn btn-warning">Warning Button</button>
-    </div> -->
-  
-
-
-
-
-
+</html>
